// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreadOverview should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomWidth": 1,
        "borderColor": "rgba(63,67,80,0.1)",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "marginVertical": 12,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      Object {
        "borderBottomWidth": 0,
      },
    ]
  }
  testID="thread-overview"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(63,67,80,0.64)",
          "fontFamily": "OpenSans",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
          "marginHorizontal": 4,
        }
      }
    >
      No replies yet
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 16,
          "opacity": 1,
        }
      }
      testID="sometestId"
    >
      <Icon
        color="#386fe5"
        name="bookmark"
        size={24}
      />
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 16,
          "opacity": 1,
        }
      }
      testID="sometestId"
    >
      <Icon
        color="rgba(63,67,80,0.64)"
        name="dots-horizontal"
        size={24}
      />
    </View>
  </View>
</View>
`;

exports[`ThreadOverview should match snapshot when post is not saved and 0 replies 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomWidth": 1,
        "borderColor": "rgba(63,67,80,0.1)",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "marginVertical": 12,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      Object {
        "borderBottomWidth": 0,
      },
    ]
  }
  testID="thread-overview"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(63,67,80,0.64)",
          "fontFamily": "OpenSans",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
          "marginHorizontal": 4,
        }
      }
    >
      No replies yet
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 16,
          "opacity": 1,
        }
      }
      testID="sometestId"
    >
      <Icon
        color="#386fe5"
        name="bookmark"
        size={24}
      />
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 16,
          "opacity": 1,
        }
      }
      testID="sometestId"
    >
      <Icon
        color="rgba(63,67,80,0.64)"
        name="dots-horizontal"
        size={24}
      />
    </View>
  </View>
</View>
`;

exports[`ThreadOverview should match snapshot when post is saved and has replies 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomWidth": 1,
        "borderColor": "rgba(63,67,80,0.1)",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "marginVertical": 12,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
    ]
  }
  testID="thread-overview"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(63,67,80,0.64)",
          "fontFamily": "OpenSans",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
          "marginHorizontal": 4,
        }
      }
    >
      2 replies
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 16,
          "opacity": 1,
        }
      }
      testID="sometestId"
    >
      <Icon
        color="rgba(63,67,80,0.64)"
        name="bookmark-outline"
        size={24}
      />
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 16,
          "opacity": 1,
        }
      }
      testID="sometestId"
    >
      <Icon
        color="rgba(63,67,80,0.64)"
        name="dots-horizontal"
        size={24}
      />
    </View>
  </View>
</View>
`;
